<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="core_ui_item_category_title">분류 바꾸기</string>
    <string name="core_ui_item_category_selected_state">선택됨</string>
    <string name="core_ui_item_category_unselected_state">선택 안 됨</string>
    <string name="core_ui_item_category_motivation">지원 동기</string>
    <string name="core_ui_item_category_growth">성장 배경</string>
    <string name="core_ui_item_category_experience">경험 기술</string>
    <string name="core_ui_item_category_competency">직무 역량</string>
    <string name="core_ui_item_category_aspiration">입사 후 포부</string>
    <string name="core_ui_item_category_other">기타</string>
</resources>
